# fast-carpenter

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .requirements_dev.txt  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  README.rst  noxfile.py  pyproject.toml  setup.cfg  setup.py  setup_lcg.sh  tox.ini
.github/workflows/: ci.yml  existing-ci.yml
benchmarks/compare_carpenter_versions/: .gitignore  clean_up.sh  run.sh
docs/: Makefile  UML.md  api.rst  command_line.rst  conf.py  demo_process_cfg.yml  examples.rst  glossary.rst  index.rst  intro.rst  make.bat  philosophy.rst  processing_config.rst  requirements.txt  setup.rst  workflows.md
docs/_static/: custom.css
docs/deprecated/: index.rst  nanoaod2dataframes.md  trees2dataframes.rst
docs/trees2dataframes/: demo_cfg.yml  index.rst  making_binned_dfs.rst  t2df_combine_mc_components.rst  t2df_convert_to_long_form.rst
examples/: README.md  cms_l1t_data.yml  cms_l1t_processing.yml  lz_processing.yml
examples/cms/: cms_l1t_processing.yml  cms_l1t_raw.py  description_cms_l1t.md
examples/dune/: description_dune.md  dune_snnu_data.yml  dune_snnu_processing.yml
examples/notebooks/: Dask Custom graph.ipynb  Dask_with_raw_carpenter.ipynb
fast_carpenter/: __init__.py  __main__.py  bookkeeping.py  dataspace.py  define.py  event_builder.py  expressions.py  help.py  masked_tree.py  reductions.py  summary.py  tree_adapter.py  tree_wrapper.py  uproot_layer.py  utils.py  version.py  weights.py
fast_carpenter/backends/: __init__.py  _alphatwirl.py  _base.py  _dask.py  _parsl.py  alphatwirl.py  alphatwirl_event_builder.py  coffea.py
fast_carpenter/data_import/: __init__.py  _base.py  _multitree.py  _uproot3.py  _uproot4.py
fast_carpenter/data_mapping/: __init__.py  array_methods.py  connectors.py  indexing.py
fast_carpenter/define/: __init__.py  reductions.py  systematics.py  variables.py
fast_carpenter/selection/: __init__.py  filters.py  stage.py
fast_carpenter/summary/: __init__.py  aghast.py  binned_dataframe.py  binning_config.py  eventByEvent_dataframe.py  event_level_dataframe.py  import_aghast.py
fast_carpenter/testing/: __init__.py  dummy_binning_descriptions.py
fast_chainsaw/: __init__.py  __main__.py  define.py  event_builder.py  expressions.py  summary.py  tree_wrapper.py
fast_chainsaw/selection/: __init__.py  filters.py  masked_tree.py  stage.py
src/fasthep_carpenter/: __init__.py  main.py  protocols.py  settings.py  utils.py  workflow.py
src/fasthep_carpenter/backends/: __init__.py  _base.py  _dask.py  _local.py
src/fasthep_carpenter/bookkeeping/: __init__.py
src/fasthep_carpenter/collectors/: __init__.py
src/fasthep_carpenter/data_import/: __init__.py  _multitree.py  _uproot4.py
src/fasthep_carpenter/data_mapping/: __init__.py  array_methods.py  connectors.py  indexing.py
src/fasthep_carpenter/expressions/: __init__.py  ast.py  custom.py  engines.py  symbols.py
src/fasthep_carpenter/stages/: __init__.py  _final.py  data_source.py  define.py  external.py  filter.py  histogram.py  invariantMass.py  output.py
src/fasthep_carpenter/testing/: __init__.py
test/: test_summary.py
test/selection/: test_filters.py  test_masked_tree.py  test_stage.py
tests/: conftest.py  test_ak_issue_1241.py  test_counter.py  test_dataspace.py  test_event_builder.py  test_expressions.py  test_file_adapter.py  test_masked_tree.py  test_masked_trees.py  test_multi_tree.py  test_summary.py  test_tree_adapter.py  test_tree_adapter_masked.py  test_tree_adapter_ranged.py  test_tree_wrapper.py  test_weigths.py  test_workflow.py
tests/backends/: test_alphatwirl.py  test_init.py  test_workflow.py
tests/data/: download_remote_data.py  eventweights.npy  remote_data.json
tests/data_import/: test_data_import.py  test_uproot4.py
tests/data_mapping/: conftest.py  test_array_methods.py  test_datamapping.py  test_file_connector.py  test_multi_tree_indexing.py
tests/define/: test_reductions.py  test_systematics.py  test_variables.py
tests/expressions/: test_ast.py
tests/selection/: test_filters.py  test_masked_tree.py  test_stage.py
tests/stages/: test_define.py
tests/summary/: dummy_binning_descriptions.py  test_binned_dataframe.py  test_binning_config.py  test_event_level_dataframe.py
